      with modifications by Pere Pujal i Carabantes <pere@fornol.no-ip.org>

    * ROYGBIV Rainbow - Draw a rainbow arc using solid colors of
      Red, Orange, Yellow, Green, Blue, Indigo and Violet.

    * Wet Paint - Draws a light coat of paint, and smudges at the same time.
      (Based on Smudge tool.  Requested by gallery artist Angela.)

  * Other Improvements:
    -------------------
    * After switching into, or out of, a magic tool, the canvas is updated.

    * Starter images can be in SVG (Scalable Vector Graphics) format.
      (Avoids loading PNG if SVG with the same name exists.)

    * Removed white artifacts from some Starters, and reduced file size
      of some Starters.

    * When scaling/smearing a picture or Starter, to fit the current canvas
      size, it was not drawing on the far right or bottom edges, causing
      Fill tool to 'spill'.  (Example: fill one of the puzzle pieces on the
      right or bottom of the 5x5 jigsaw Starter, and all pieces on the right
      and bottom would get filled, too.)

    * Starter images can be in KPX (Kid Pix Template) format.
      (These appear to simply be JPEG with 60 byte's worth of Mac OS
      resource fork header at the beginning.)
      (Thanks to Sarah Curry for sharing some example templates to test.)

    * When a default size was not specified, SVG-based Stamps would default
      to the largest, which was canvas-sized.  Now defaulting to a more
      reasonable size.  (And users can click the maximum size choice to get
      the largest, canvas-sized rendition.)
      (SF.net bug #2836471)

    * Widened dialog windows, to help avoid word-wrap and overlap problems
      with some prompts, in some locales.
      (SF.net bug #2834461)

    * Shape Tool now locks rotation into 15 or 5 degree steps, when the
      radius of the shape is very small or small, respectively.
      (SF.net bug #2837177)

    * Shape Tool tries to avoid glitches where lines connect, when shape is