@@ -556,6 +556,50 @@ Fonts
 
      ----------------------------------------------------------------------
 
+'Templates'
+
+     'Template' images also appear in the 'New' dialog, along with solid
+     color background choices and 'Starters'. (Note: Tux Paint prior to
+     version 0.9.22 did not have the 'Template' feature.)
+
+     Unlike pictures drawn in Tux Paint by users and then opened later,
+     opening a 'template' creates a new drawing. When you save, the
+     'template' image is not overwritten. Unlike 'starters', there is no
+     immutable 'layer' above the canvas. You may draw over any part of it.
+
+     When the 'Eraser' tool is used on a picture based on a 'template',
+     rather than turning the canvas to a solid color, such as white, it
+     returns that part of the canvas to the original picture from the
+     'template'.
+
+     'Templates' are simply image files (in PNG, JPG, SVG or KPX format). No
+     preparation or conversion should be required.
+
+     The 'template' images should be the same size as Tux Paint's canvas.
+     (See the "Loading Other Pictures into Tux Paint" section of README for
+     details on sizing.) If they are not, they will be stretched, without
+     affecting the shape ("aspect ratio"); however some smudging may be
+     applied to the edges.
+
+     Place them in the "templates" directory. When the 'New' dialog is
+     accessed in Tux Paint, the 'template' images will appear in the screen
+     that appears, after the various solid color choices and 'starters'.
+
+     Note: 'Templates' can't be saved over from within Tux Paint, since
+     loading a 'template' is really like creating a new image. (Instead of
+     being blank, though there's already something there to work with.) The
+     'Save' command simply creates a new picture, like it would if the 'New'
+     command had been used.
+
+     Note: 'Templates' are 'attached' to saved pictures, via a small text
+     file that has the same name as the saved file, but with ".dat" as the
+     extension. This allows the background to continue to be available to the
+     drawing (e.g., when using the 'Eraser' tool) even after Tux Paint has
+     been quit, or another picture loaded or started. (In other words, if you
+     base a drawing on a 'template' image, it will always be affected by it.)
+
+     ----------------------------------------------------------------------
+
 Translations
 
      Tux Paint supports numerous languages, thanks to use of the "gettext"
